// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductsSelector clicking the button should show a dropdown with selected items selected 1`] = `
<body>
  <p
    class="a11y-speak-intro-text"
    hidden="hidden"
    id="a11y-speak-intro-text"
    style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
  />
  <div
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="a11y-speak-region"
    id="a11y-speak-assertive"
    style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
  />
  <div
    aria-atomic="true"
    aria-live="polite"
    aria-relevant="additions text"
    class="a11y-speak-region"
    id="a11y-speak-polite"
    style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
  />
  <div>
    <fieldset
      class="memberships__dialog-sections-products form-fieldset"
      role="group"
    >
      <label
        class="form-label"
        for="coupon_code"
      >
        Products
      </label>
      <div
        class="components-dropdown components-dropdown-menu"
        tabindex="-1"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="2 products selected."
          class="components-button components-dropdown-menu__toggle has-icon"
          type="button"
        >
          <svg
            aria-hidden="true"
            focusable="false"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
            />
          </svg>
          2 products selected.
        </button>
      </div>
    </fieldset>
  </div>
</body>
`;

exports[`ProductsSelector should render with 1 product selected when 1 product has been selected 1`] = `
<div>
  <fieldset
    class="memberships__dialog-sections-products form-fieldset"
    role="group"
  >
    <label
      class="form-label"
      for="coupon_code"
    >
      Products
    </label>
    <div
      class="components-dropdown components-dropdown-menu"
      tabindex="-1"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="1 product selected"
        class="components-button components-dropdown-menu__toggle has-icon"
        type="button"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
          />
        </svg>
        1 product selected
      </button>
    </div>
  </fieldset>
</div>
`;

exports[`ProductsSelector should render with 2 products selected when 2 products have been selected 1`] = `
<div>
  <fieldset
    class="memberships__dialog-sections-products form-fieldset"
    role="group"
  >
    <label
      class="form-label"
      for="coupon_code"
    >
      Products
    </label>
    <div
      class="components-dropdown components-dropdown-menu"
      tabindex="-1"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="2 products selected."
        class="components-button components-dropdown-menu__toggle has-icon"
        type="button"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
          />
        </svg>
        2 products selected.
      </button>
    </div>
  </fieldset>
</div>
`;

exports[`ProductsSelector should render with any product selected when no specific products have been selected 1`] = `
<div>
  <fieldset
    class="memberships__dialog-sections-products form-fieldset"
    role="group"
  >
    <label
      class="form-label"
      for="coupon_code"
    >
      Products
    </label>
    <div
      class="components-dropdown components-dropdown-menu"
      tabindex="-1"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Any product"
        class="components-button components-dropdown-menu__toggle has-icon"
        type="button"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
          />
        </svg>
        Any product
      </button>
    </div>
  </fieldset>
</div>
`;
